--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -69,37 +69,8 @@ jobs:
             --junitxml=junit/test-results.xml \
             --django-db-bench=${{ env.BENCH_PATH }}
 
-      - uses: actions/cache@v3
-        with:
-          path: ~/.cache/pre-commit
-          key: ${{ runner.os }}-pre-commit-${{ hashFiles('**/.pre-commit-config.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pre-commit-
-
-      # Publish coverage and test results
-      - uses: codecov/codecov-action@v2
-
-      - uses: actions/upload-artifact@v3
-        with:
-          name: pytest-results
-          path: junit/test-results.xml
+      # Run linters and Django related checks
+      - name: Run Linters and Checks
+        run: |
+          pre-commit run --all --verbose
         if: ${{ always() }}
-
-      # Publish detected differences as comment
-      - uses: NyanKiyoshi/pytest-django-queries-ci-tools@v1
-        with:
-          query_raw_dump_path: ${{ env.BENCH_PATH }}
-          diff_endpoint: "https://dtab784j47g1o.cloudfront.net/default/saleor-db-queries-bot-diff"
-          diff_results_base_url: "https://dtab784j47g1o.cloudfront.net"
-        if: github.event_name == 'pull_request' && github.repository == 'saleor/saleor'
-
-      # Save results for future comparison against pull requests
-      - uses: NyanKiyoshi/pytest-django-queries-ci-tools@v1
-        with:
-          query_raw_dump_path: ${{ env.BENCH_PATH }}
-          upload_endpoint: ${{ secrets.QUERIES_UPLOAD_ENDPOINT_URL }}
-          upload_secret_key: ${{ secrets.QUERIES_UPLOAD_SECRET }}
-        if: github.event_name == 'push' && github.repository == 'saleor/saleor'
-
-      # Run pre-commit
-      - uses: pre-commit/action@v3.0.0
