--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -62,15 +62,8 @@ jobs:
           python -m pip install wheel
           python -m pip install -r requirements_dev.txt
 
-      - name: Run tests
-        run: |
-          pytest \
-            --cov \
-            --junitxml=junit/test-results.xml \
-            --django-db-bench=${{ env.BENCH_PATH }}
-
       # Run linters and Django related checks
       - name: Run Linters and Checks
         run: |
-          pre-commit run --all --verbose
+          pre-commit run --all
         if: ${{ always() }}
